[gd_scene load_steps=19 format=2]

[ext_resource path="res://PlaySpace/Playspace.gd" type="Script" id=1]
[ext_resource path="res://Asset/DrawButton.png" type="Texture" id=2]
[ext_resource path="res://PlaySpace/DrawButton.gd" type="Script" id=3]
[ext_resource path="res://Asset/background_color.png" type="Texture" id=4]
[ext_resource path="res://PlaySpace/GraveCards.gd" type="Script" id=5]
[ext_resource path="res://Asset/NextPhaseButton/frame_4_delay-0.1s.png" type="Texture" id=6]
[ext_resource path="res://Asset/NextPhaseButton/frame_5_delay-0.1s.png" type="Texture" id=7]
[ext_resource path="res://Asset/NextPhaseButton/frame_0_delay-0.1s.png" type="Texture" id=8]
[ext_resource path="res://Asset/NextPhaseButton/frame_1_delay-0.1s.png" type="Texture" id=9]
[ext_resource path="res://Asset/NextPhaseButton/frame_2_delay-0.1s.png" type="Texture" id=10]
[ext_resource path="res://Asset/NextPhaseButton/frame_3_delay-0.1s.png" type="Texture" id=11]
[ext_resource path="res://Asset/NextPhaseButton/frame_7_delay-0.1s.png" type="Texture" id=12]
[ext_resource path="res://Asset/NextPhaseButton/frame_6_delay-0.1s.png" type="Texture" id=13]
[ext_resource path="res://Asset/NextPhaseButton/frame_8_delay-0.1s.png" type="Texture" id=14]
[ext_resource path="res://PlaySpace/NextPhaseButton.gd" type="Script" id=15]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D









# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 9
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 11 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 6 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 7 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 13 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 12 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 14 )
frame_8/delay_sec = 0.0

[sub_resource type="GDScript" id=3]
script/source = "extends Sprite

const main_icon = preload(\"res://Asset/Main_Phase_Icon.png\")
const battle_icon = preload(\"res://Asset/Attack_Phase_Icon.png\")
"

[node name="Playspace" type="Node2D"]
script = ExtResource( 1 )

[node name="DuelBackground" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 883.0
margin_bottom = 497.0

[node name="Player2Side" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 883.0
margin_bottom = 238.0
rect_min_size = Vector2( 881, 238 )

[node name="Player1Side" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 242.0
margin_right = 883.0
margin_bottom = 497.0
rect_min_size = Vector2( 881, 254 )

[node name="Something" type="MarginContainer" parent="VBoxContainer/Player1Side"]
margin_right = 41.0
margin_bottom = 255.0
rect_min_size = Vector2( 41, 254 )

[node name="Little Gap" type="MarginContainer" parent="VBoxContainer/Player1Side"]
margin_left = 45.0
margin_right = 50.0
margin_bottom = 255.0
rect_min_size = Vector2( 5, 254 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Player1Side"]
margin_left = 54.0
margin_right = 730.0
margin_bottom = 255.0
rect_min_size = Vector2( 676, 254 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Player1Side/VBoxContainer"]
margin_right = 676.0
margin_bottom = 160.0
rect_min_size = Vector2( 676, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/VBoxContainer"]
margin_right = 676.0
margin_bottom = 15.0
rect_min_size = Vector2( 676, 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Player1Side/VBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 676.0
margin_bottom = 160.0
rect_min_size = Vector2( 676, 141 )

[node name="Left Gap" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 141.0
rect_min_size = Vector2( 126, 141 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 675.0
margin_bottom = 141.0
rect_min_size = Vector2( 545, 141 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Player1Side/VBoxContainer"]
margin_top = 164.0
margin_right = 676.0
margin_bottom = 255.0
rect_min_size = Vector2( 676, 90 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer"]
margin_right = 67.0
margin_bottom = 91.0
rect_min_size = Vector2( 67, 90 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 86.0
margin_bottom = 91.0
rect_min_size = Vector2( 15, 90 )

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 150.0
margin_bottom = 91.0
rect_min_size = Vector2( 60, 90 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 162.0
margin_bottom = 91.0
rect_min_size = Vector2( 8, 90 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 621.0
margin_bottom = 91.0
rect_min_size = Vector2( 455, 90 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 455.0
margin_bottom = 12.0
rect_min_size = Vector2( 455, 12 )

[node name="PlayerDeck" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 455.0
margin_bottom = 91.0
rect_min_size = Vector2( 455, 75 )

[node name="Little Gap2" type="MarginContainer" parent="VBoxContainer/Player1Side"]
margin_left = 734.0
margin_right = 764.0
margin_bottom = 255.0
rect_min_size = Vector2( 30, 254 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Player1Side"]
margin_left = 768.0
margin_right = 883.0
margin_bottom = 255.0
rect_min_size = Vector2( 115, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer2"]
margin_right = 115.0
margin_bottom = 148.0
rect_min_size = Vector2( 115, 148 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Player1Side/VBoxContainer2"]
margin_top = 152.0
margin_right = 115.0
margin_bottom = 255.0
rect_min_size = Vector2( 115, 103 )

[node name="DrawDeck" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="DrawButton" type="TextureButton" parent="DrawDeck"]
margin_left = 1269.0
margin_top = 671.0
margin_right = 1569.0
margin_bottom = 871.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Cards" type="Node2D" parent="."]

[node name="PlayerField" type="Node2D" parent="."]

[node name="Graveyard" type="Node2D" parent="."]

[node name="GraveCards" type="HBoxContainer" parent="Graveyard"]
margin_left = 92.0
margin_top = 550.0
margin_right = 284.0
margin_bottom = 713.0
script = ExtResource( 5 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="OppField" type="Node2D" parent="."]

[node name="PlayerHealth" type="HBoxContainer" parent="."]
margin_left = 1297.0
margin_top = 799.0
margin_right = 1365.0
margin_bottom = 851.0

[node name="Label" type="Label" parent="PlayerHealth"]
margin_top = 19.0
margin_bottom = 33.0

[node name="OppHealth" type="HBoxContainer" parent="."]
margin_left = 121.0
margin_top = 27.0
margin_right = 311.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="OppHealth"]
margin_top = 83.0
margin_bottom = 97.0

[node name="NextPhaseNode" type="Node2D" parent="."]

[node name="NextPhaseButton" type="TextureButton" parent="NextPhaseNode"]
margin_left = 1357.0
margin_top = 380.0
margin_right = 1464.0
margin_bottom = 484.0
texture_normal = SubResource( 4 )
expand = true
script = ExtResource( 15 )

[node name="PhaseBox" type="HBoxContainer" parent="."]
margin_left = 1444.0
margin_top = 526.0
margin_right = 1554.0
margin_bottom = 640.0

[node name="PhaseSprite" type="Sprite" parent="PhaseBox"]
script = SubResource( 3 )

[node name="Energy" type="HBoxContainer" parent="."]
margin_left = 1298.0
margin_top = 810.0
margin_right = 1386.0
margin_bottom = 890.0

[node name="Label" type="Label" parent="Energy"]
margin_top = 33.0
margin_bottom = 47.0

[node name="WeatherIcon" type="HBoxContainer" parent="."]
margin_left = 82.0
margin_top = 402.0
margin_right = 194.0
margin_bottom = 518.0

[node name="WeatherSprite" type="Sprite" parent="WeatherIcon"]

[node name="DummyBox" type="HBoxContainer" parent="."]
margin_left = 354.0
margin_top = 122.0
margin_right = 570.0
margin_bottom = 284.0

[node name="StatusScreen" type="HBoxContainer" parent="."]
margin_left = 762.0
margin_top = 382.0
margin_right = 1020.0
margin_bottom = 480.0

[node name="StatusLabel" type="Label" parent="StatusScreen"]
margin_top = 42.0
margin_bottom = 56.0
